--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
     "axios": "^1.7.2",
     "chai": "^5.1.1",
     "compression": "^1.7.4",
+    "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "firebase": "^9.0.0",
     "firebase-admin": "^12.1.1",
+    "jsdom": "^24.0.0",
     "mocha": "^10.4.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "salted-md5": "^4.0.8"
   },
   "name": "padaria-node",
