--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.7.2",
     "chai": "^5.1.1",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
