--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "abstract": "^0.1.2",
     "axios": "^1.7.2",
     "chai": "^5.1.1",
     "compression": "^1.7.4",
@@ -7,6 +8,7 @@
     "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "event-abstract-class": "^1.0.6",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "firebase": "^9.0.0",
@@ -18,6 +20,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "salted-md5": "^4.0.8"
   },
   "name": "padaria-node",
