--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "salted-md5": "^4.0.8",
+    "supertest": "^7.0.0",
     "uuid": "^9.0.1"
   },
   "name": "padaria-node",
