--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "abstract": "^0.1.2",
     "axios": "^1.7.2",
-    "chai": "^5.1.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
@@ -14,7 +13,6 @@
     "firebase": "^9.0.0",
     "firebase-admin": "^12.1.1",
     "jsdom": "^24.0.0",
-    "mocha": "^10.4.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "prop-types": "^15.8.1",
@@ -33,5 +31,10 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "mocha": "^10.4.0",
+    "request": "^2.88.2"
+  }
 }
