--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test",
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
